removed bug on mobile

--- a/size640.css
+++ b/size640.css
@@ -1,13 +1,23 @@
 header {
   width: 100vw;
-  height: 102rem;
+  height: 74rem;
   background-image: url(./img/home_a_hero_d.webp);
   /* background-position: -95rem; */
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
   gap: 8rem;
-  padding-bottom: 16rem;
+  /* padding-bottom: 16rem; */
+}
+.innerHeader {
+  width: 100%;
+  /* height: 66.639rem; */
+
+  height: 74rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
 }
 .content {
   /* margin-top: 28rem; */
