--- a/size960.css
+++ b/size960.css
@@ -1,3 +1,26 @@
+header {
+  width: 100vw;
+  height: 76.859rem;
+  background-image: url(./img/home_a_hero_d.webp);
+  /* background-position: -95rem; */
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  gap: 8rem;
+
+  /* padding-bottom: 16rem; */
+}
+.innerHeader {
+  width: 100%;
+  /* height: 66.639rem; */
+
+  height: 76.859rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
+
 nav .logoCont {
   width: 14.2rem;
   height: 1.8rem;
@@ -6,10 +29,12 @@ nav .logoCont {
 .content h1 {
   font-size: 7.2rem;
   width: 70.822rem;
-  height: 17.6rem;
+  /* height: 17.6rem; */
+  display: flex;
+  align-items: end;
 }
 .content {
-  gap: 8rem;
+  gap: 1rem;
 }
 .form1 {
   width: 60rem;
