--- a/style.css
+++ b/style.css
@@ -33,16 +33,28 @@ header {
   align-items: center;
   justify-content: center;
 }
+
+.innerHeader {
+  width: 100%;
+  /* height: 66.639rem; */
+
+  height: 72rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+}
 nav {
   width: 100%;
+  height: 100%;
   height: 6rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
   padding: 0 2rem;
-  position: absolute;
+  /* position: absolute;
   top: 0;
-  left: 0;
+  left: 0; */
 }
 nav .logoCont {
   width: 9.5rem;
